#5: fixing layout issue on Firefox. No more errors on Firefox 27.0.1

--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -395,6 +395,7 @@ fieldset{
   @include box(horizontal, start, center);
   height: 60px;
   background-color: #DEDEDE;
+  width: 100%;
 
   li{
     padding-left: 30px;
